# Slabb

./: CMakeLists.txt  CMakeSettings.json  README.md  build-debug.bat
app/: main.cpp
assets/config/: application_cfg.toml
cmake/: dependencies.cmake
include/common/: common.hpp  common_graphics.hpp
include/core/: application.hpp
include/core/core_interface/: core_vertex.hpp
include/core/model/: mesh.hpp  model.hpp
include/core/systems/: config_system.hpp  render_system.hpp
include/graphics/: context.hpp  device.hpp  instance.hpp  render_graph.hpp  render_pipeline.hpp  render_queue.hpp  renderer.hpp  scene.hpp  texture_manager.hpp
include/graphics/graphics_interface/: graphics_shader.hpp  graphics_vertex.hpp
include/graphics/tools/: debug.hpp  debugger.hpp  string_utils.hpp  validation.hpp
include/graphics/wrapper/: device.hpp  instance.hpp  root_signature.hpp  shader_manager.hpp  swapchain.hpp
include/graphics/wrapper/command/: command_allocator.hpp  command_list.hpp  command_queue.hpp
include/graphics/wrapper/descriptor/: descriptor_heap.hpp
include/graphics/wrapper/pipeline/: graphics_pipeline.hpp
include/graphics/wrapper/resource/: descriptor_heap.hpp  resource_heap.hpp
include/graphics/wrapper/synchronization/: fence.hpp
include/graphics/wrapper/window/: window.hpp
sandbox/: CMakeLists.txt  main.cpp
shaders/: main.pixel.hlsl  main.vertex.hlsl
src/: CMakeLists.txt
src/core/: application.cpp
src/core/core_interface/: core_vertex.cpp
src/core/model/: mesh.cpp  model.cpp
src/core/systems/: config_system.cpp  render_system.cpp
src/graphics/: context.cpp  device.cpp  render_graph.cpp  render_pipeline.cpp  render_queue.cpp  renderer.cpp  scene.cpp  texture_manager.cpp
src/graphics/graphics_interface/: graphics_shader.cpp  graphics_vertex.cpp
src/graphics/tools/: debugger.cpp  validation.cpp
src/graphics/wrapper/: device.cpp  instance.cpp  root_signature.cpp  shader_manager.cpp  swapchain.cpp
src/graphics/wrapper/command/: command_allocator.cpp  command_list.cpp  command_queue.cpp
src/graphics/wrapper/descriptor/: descriptor_heap.cpp
src/graphics/wrapper/pipeline/: graphics_pipeline.cpp
src/graphics/wrapper/resource/: descriptor_heap.cpp  resource_heap.cpp
src/graphics/wrapper/synchronization/: fence.cpp
src/graphics/wrapper/window/: window.cpp
